# mixed-c-fortran-cmake-project

./: .gitignore  CMakeLists.txt  README.md  main.c  test.f90
